--- a/netlify.toml
+++ b/netlify.toml
@@ -1,1 +1,4 @@
 [build]
+  command = "npx @11ty/eleventy"
+  functions = "dist/functions" # netlify dev uses this to know where to scaffold and serve your functions
+  publish = "dist"
